[package]
name = "webrtc-demo-client"
version = "0.1.0"
authors = ["David Simmons <simmons@davidsimmons.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/simmons/webrtc-demo-client"
keywords = ["webrtc" ]
categories = ["network-programming"]
description = "A demonstration WebRTC client"
readme = "README.md"

[dependencies]
tungstenite = "0.6"
tokio-tungstenite = "0.6"
tokio = "0.1"
futures = "0.1"
url = "1.7.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
dotenv = "0.10"
clap = "2.32"
log = "0.4.5"
candidateparser = "0.2.0"
hex = "0.3.2"
openssl = "0.10.11"
tokio-openssl = "0.2.1"
foreign-types = "0.3.2"
openssl-sys = "0.9"
libc = "0.2"
rand = "0.5"
get_if_addrs = "0.5.3"
bytes = "0.4.10"
env_logger = "0.5.13"
tokio-codec = "0.1.0"
crc = "1.8.1"
tokio-timer = "0.2.6"
tokio-core = "0.1"

webrtc-sctp = { path = "../webrtc-sctp" }
